--- a/Views/partials/stats.handlebars
+++ b/Views/partials/stats.handlebars
@@ -11,15 +11,15 @@
         </div>
         <div class = "row">
             <div class = "col-md-2 text-left">Comments: </div>
-            <div class = "col-md-10 text-right">{{ sidebar.stats.images }} </div>
+            <div class = "col-md-10 text-right">{{ sidebar.stats.comments }} </div>
         </div>
         <div class = "row">
             <div class = "col-md-2 text-left">Views: </div>
-            <div class = "col-md-10 text-right">{{ sidebar.stats.images }} </div>
+            <div class = "col-md-10 text-right">{{ sidebar.stats.views }} </div>
         </div>
         <div class = "row">
             <div class = "col-md-2 text-left">Likes: </div>
-            <div class = "col-md-10 text-right">{{ sidebar.stats.images }} </div>
+            <div class = "col-md-10 text-right">{{ sidebar.stats.likes }} </div>
         </div>
     </div>
 </div>
